--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,11 +1,6 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-span[epub|type~="subtitle"]{
-	display: block;
-	font-weight: normal;
-}
-
 [epub|type~="z3998:song"] p{
 	text-align: left;
 	text-indent: 0;
@@ -28,4 +23,9 @@ span[epub|type~="subtitle"]{
 p span.i1{
 	text-indent: -1em;
 	padding-left: 2em;
+}
+
+span.inscription{
+	font-weight: normal;
+	font-variant: small-caps;
 }
