Reduce complexity of blockquote

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -25,7 +25,6 @@ p span.i1{
 	padding-left: 2em;
 }
 
-span.inscription{
-	font-weight: normal;
+#chapter-7 blockquote{
 	font-variant: small-caps;
 }
